# PoloniumLauncher

./: README.md  meson.build  org.gnome.PoloniumLauncher.json
data/: meson.build  org.gnome.PoloniumLauncher.desktop.in  org.gnome.PoloniumLauncher.gschema.xml  org.gnome.PoloniumLauncher.metainfo.xml.in  org.gnome.PoloniumLauncher.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.py  meson.build  poloniumlauncher.gresource.xml  poloniumlauncher.in  window.py  window.ui
src/view/: inst_settings.blp  window.blp  window.py
